--- a/AMAZON/style.css
+++ b/AMAZON/style.css
@@ -3,13 +3,35 @@
     font-family: Arial, Helvetica, sans-serif;
     border: border-box;
 }
+
+
+/** border **/
+
+
+.border {
+    border: 2px solid transparent;
+}
+.border:hover {
+    border: 2px solid white;
+}
+
+
+/** Navigation Bar **/
+
+
 .navbar {
     height: 70px;
     background-color: #0f1111;
     color: white;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
 }
+
+
+/** Box 1 **/
+
+
 .nav-logo {
     height: 50px;
     width: 100px;
@@ -17,23 +39,20 @@
     margin-bottom: 3px;
 }
 .logo {
-    background-image: url(Images/Amazon-logo.png);
+    background-image: url(Images/amazon_logo.png);
     background-size: cover;
-    height: 50px;
-    width: 100%;
+    height: 60px;
+    width: 100px;
 }
-/** border **/
-.border {
-    border: 2px solid transparent;
-}
-.border:hover {
-    border: 2px solid white;
-}
+
+
+/** Box 2 **/
+
+
 .nav-address {
     margin-top: 3px;
     margin-left: 3px;
 }
-/** Box 2 **/
 .add-first {
     color: #cccccc;
     font-size: 0.85rem;
@@ -42,9 +61,146 @@
 }
 .add-sec {
     font-size: 1rem;
+    font-weight: bold;
 }
 .add-icon {
     display: flex;
     align-items: center;
     margin-left: 0px;
+}
+
+
+/** Box 3 **/
+
+
+.nav-search {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #cccccc;
+    width: 650px;
+    height: 40px;
+    border-radius: 5px;
+    border: 3px solid transparent;
+}
+.search-select {
+    background-color: #f3f3f39a;
+    width: 50px;
+    text-align: center;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border: none;
+}
+.search-input {
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+.search-icon {
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    color: #0f1111;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.nav-search:hover {
+    border: 3px solid orange;
+}
+
+
+/** Box 4 **/
+
+
+span {
+    font-size: 0.85rem;
+}
+.nav-sec {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+
+/** Box 5 **/
+
+
+
+/** Box 6 **/ 
+
+
+.nav-cart i {
+    font-size: 30px;
+}
+.nav-cart {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+
+/** Panel **/
+
+
+.panel {
+    height: 40px;
+    background-color: #222f3d;
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.panel-opt p {
+    display: inline;
+    margin-left: 20px;
+}
+.panel-opt {
+    width: 70%;
+    font-size: 0.85rem;
+}
+.panel-deals {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+
+/** Hero Section **/
+
+
+.hero-section {
+    background-image: url(Images/hero_image.jpg);
+    background-size: cover;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.hero-msg {
+    width: 90%;
+    text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    background: linear-gradient(to right, rgb(53, 63, 102),#d5dad8);
+    color: #0f1111;
+    font-weight: bold;
+    word-spacing: 3px;
+    font-size: 1rem;
+    margin-bottom: 25px;
+}
+
+
+/** Shop Section **/
+
+
+.shop-section {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #cdd8d5;
+}
+.box {
+    border: 2px solid black;
+    height: 400px;
+    width: 23%;
+    background-color: white;
 }
