--- a/AMAZON/style.css
+++ b/AMAZON/style.css
@@ -3,7 +3,9 @@
     font-family: Arial, Helvetica, sans-serif;
     border: border-box;
 }
-
+.cursor {
+    cursor: pointer;
+}
 
 /** border **/
 
@@ -29,7 +31,7 @@
 }
 
 
-/** Box 1 **/
+/** Navigation Bar Box 1 **/
 
 
 .nav-logo {
@@ -46,7 +48,7 @@
 }
 
 
-/** Box 2 **/
+/** Navigation Bar Box 2 **/
 
 
 .nav-address {
@@ -70,7 +72,7 @@
 }
 
 
-/** Box 3 **/
+/** Navigation Bar Box 3 **/
 
 
 .nav-search {
@@ -110,7 +112,7 @@
 }
 
 
-/** Box 4 **/
+/** Navigation Bar Box 4 **/
 
 
 span {
@@ -122,11 +124,11 @@ span {
 }
 
 
-/** Box 5 **/
+/** Navigation Bar Box 5 **/
 
 
 
-/** Box 6 **/ 
+/** Navigation Bar Box 6 **/ 
 
 
 .nav-cart i {
@@ -195,12 +197,111 @@ span {
 
 .shop-section {
     display: flex;
+    flex-wrap: wrap;
+    height: 950px;
     justify-content: space-evenly;
     background-color: #cdd8d5;
 }
 .box {
-    border: 2px solid black;
     height: 400px;
     width: 23%;
     background-color: white;
+    padding: 20px 0px 15px;
+    margin-top: 15px;
+}
+.box:hover {
+    box-shadow:rgba(0, 0, 0, 0.5) 0px 0px 15px;;
+}
+
+
+/** Shop Section Boxes **/
+
+
+.box-img {
+    height: 300px;
+    background-size: cover;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.box-content {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+.box-content p:hover {
+    text-decoration: underline;
+    color: #00505e;
+}
+.box-content p {
+    color: #007185;
+}
+
+
+/** Footer **/
+
+
+footer {
+    margin-top: 15px;
+}
+.foot-panel1 {
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85rem;
+}
+.foot-panel1:hover {
+    background-color: #37475aa8;
+}
+.foot-panel2 {
+    background-color: #222f3d;
+    color: white;
+    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+}
+ul {
+    margin-top: 20px;
+}
+ul p {
+    font-weight: bold;
+}
+ul a {
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #dddddd;
+}
+ul a:hover {
+    text-decoration: underline;
+}
+.foot-panel3 {
+    background-color: #222f3d;
+    border-top: 0.1px solid white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo {
+    background-image: url(Images/amazon_logo.png);
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+}
+.foot-panel4 {
+    background-color: #0f1111;
+    color: white;
+    height: 80px;
+    font-size: 0.7rem;
+    text-align: center;
+}
+.pages {
+    font-size: 0.7rem;
+    text-align: center;
+    padding-top: 25px;
+}
+.copyright {
+    padding-top: 5px;
 }
